fix(header): prevent inner elements from overflowing the primary containers

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -31,6 +31,7 @@
 .o-he-header__primary__left,
 .o-he-header__primary__right {
   position: relative;
+  height: $o-he-header-height;
   width: 50%;
 }
 
